--- a/index.html
+++ b/index.html
@@ -443,6 +443,10 @@
 
         <section class="hero fade-in delay-2">
             <div class="hero-text">
+                <div class="hero-photo">
+                    <img src="images/1000000268.jpg" alt="Vitaliia Sivakova"
+                        style="width:150px; height:150px; border-radius:50%; object-fit:cover; margin-bottom:1rem;">
+                </div>
                 <div class="tagline">Webbutvecklare · Stockholm</div>
                 <h1>Hej, jag är <span>Vitaliia</span></h1>
                 <p>
