--- a/index.html
+++ b/index.html
@@ -122,6 +122,19 @@
             margin-bottom: 1.5rem;
         }
 
+        /* Hero Photo */
+        .hero-photo img {
+            width: 320px;
+            height: 320px;
+            border-radius: 50%;
+            object-fit: cover;
+            object-position: center;
+            border: 4px solid rgba(255, 255, 255, 0.4);
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.6);
+            margin-bottom: 1.5rem;
+        }
+
+
         .tagline {
             font-size: 0.8rem;
             text-transform: uppercase;
@@ -445,7 +458,7 @@
             <div class="hero-text">
                 <div class="hero-photo">
                     <img src="images/1000000268.jpg" alt="Vitaliia Sivakova"
-                        style="width:150px; height:150px; border-radius:50%; object-fit:cover; margin-bottom:1rem;">
+                        style="width: 320px; height:320px; border-radius:50%; object-fit:cover; margin-bottom:1rem;">
                 </div>
                 <div class="tagline">Webbutvecklare · Stockholm</div>
                 <h1>Hej, jag är <span>Vitaliia</span></h1>
